title.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800;900&display=swap');

@font-face {
    font-display: block;
    font-family: "bootstrap-icons";
    src: url("./dep/bsi/bootstrap-icons.woff2") format("woff2"),
    url("./dep/bsi/bootstrap-icons.woff") format("woff");
}
  
.bi::before,
[class^="bi-"]::before,
[class*=" bi-"]::before {
    display: inline-block;
    font-family: bootstrap-icons !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    vertical-align: -.125em;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.bi-chevron-left::before { content: "\f284"; }
.bi-folder-plus::before { content: "\f3d3"; }
.bi-file-earmark-plus::before { content: "\f37d"; }
.bi-trash-fill::before { content: "\f5dd"; }
.bi-box-arrow-in-down::before { content: "\f1bc"; }
.bi-box-arrow-up::before { content: "\f1c6"; }
.bi-check-circle::before { content: "\f26b"; }
.bi-x-circle::before { content: "\f623"; }
.bi-fonts::before { content: "\f3da"; }
.bi-folder::before { content: "\f3d7"; }
.bi-three-dots::before { content: "\f5d4"; }



:root {
    overflow-y: hidden;
    overflow-x: hidden;
    overscroll-behavior-y: none;
    overscroll-behavior-x: none;
    --fgcolor: #000000;
    --fgcolorpass: #00000020;
    --fgcolormid: #777777;
    --bgcolor: #dddddd;
}

body {
    font-family: 'Inter', sans-serif !important;
    background-color: var(--bgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
    overflow-y: hidden;
    overflow-x: hidden;
    overscroll-behavior-y: none;
    overscroll-behavior-x: none;
    display: flex;
    flex-direction: column;
    margin: 0px;
}

[contenteditable="true"]:empty:not(:focus):before {
    content: attr(placeholder);
    opacity: 50%;
}

#iListName {
    display: inline-block;
    width: auto !important;
    height: 48px;
}

#cListInfo {
    display: flex;
    margin-bottom: 8px;
    gap: 8px;
}

ul li button {
    color: black;
    padding: 6px !important;
    font-family: 'Inter', sans-serif !important;
}

#iListColor {
    border-radius: 50%;
    border: none;
    outline: none;
    padding: 0px;
    height: 24px;
    width: 24px;
    -webkit-appearance: none;
}

#iListColor::-webkit-color-swatch-wrapper {
    padding: 0;
    -webkit-appearance: none;
}

#iListColor::-webkit-color-swatch {
    border: none;
    border-radius: 50%;
    -webkit-appearance: none;
}

hr {
    margin: 8px !important;
}

.notelist-item {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 20px;
    height: 40px;
    padding-block: 4px;
}

.notelist-item:not(:first-child){
    border-top: 1px solid black;
}

.note-option {
    border: none;
    background-color: transparent;
    font-size: 20px;
    padding: 6px !important;
    color: var(--fgcolor);

}

.shelf-option {
    align-self: center;
    height: inherit;
    font-size: 1.25rem;
}

.shelf-name {
    flex-grow: 1;
    text-align: start;
    font-size: 1.5rem;
}

#header {
    display: flex;
    height: 28px;
    width: auto;
    padding: 16px;
    align-items: center;
    justify-content: space-between;
    overscroll-behavior-y: none;
}

.notecard {
    color: var(--fgcolor) !important;
    background-color: var(--fgcolorpass) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1);

}

#iNoteName::placeholder,
#iNoteContent::placeholder {
    color: var(--fgcolormid) !important;
}

.tNoteStatus {
    color: var(--fgcolor) !important;
    border-color: var(--fgcolor) !important;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

#iNoteName {
    font-family: 'Inter', sans-serif !important;
    font-size: 40px;
    width: -webkit-fill-available;
    font-weight: 700;
    outline: none !important;
    box-shadow: none !important;
    border: none !important;
    border-radius: 12px;
    margin-inline: 15%;
    margin-block: 26px;
    padding-inline: 0px;
    resize: none;
    background-color: transparent;
    color: var(--fgcolor);
    overflow: hidden;
}

#iNoteContent {
    font-family: 'Inter', sans-serif !important;
    width: -webkit-fill-available;
    font-size: 20px;
    height: 90%;
    outline: none !important;
    box-shadow: none !important;
    border: none !important;
    border-radius: 12px;
    margin-inline: 15%;
    padding-inline: 0px;
    resize: none;
    line-height: 2rem;
    background-color: transparent;
    color: var(--fgcolor);

}

#vNoteList p {
    font-size: 24px;
}

#vEditor {
    height: -webkit-fill-available;
}

dialog {
    border: none;
    background-color: var(--bgcolor);
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
    border-radius: 12px;
}

dialog h2 {
    color: var(--fgcolor);
    font-weight: 700;
}

dialog p,
#cEmptyListHeader {
    color: var(--fgcolor);
}

#cEmptyListHeader {
    margin-top: 8px;
}

dialog input {
    outline: none !important;
    box-shadow: none !important;
    border: none;
    background-color: var(--fgcolorpass) !important;
    color: var(--fgcolor) !important;
    border-radius: 12px !important;
}

button, input[type="checkbox"]{
    cursor: pointer !important;
}

.toolbutton {
    font-family: 'Inter', sans-serif !important;
    font-size: 18px;
    height: 48px;
    color: var(--fgcolor) !important;
    border-style: solid;
    background-color: transparent;
    padding-inline: 10px;
    border-radius: 12px;
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.toolbutton i {
    font-size: 1.3rem;
    color: var(--fgcolor);
    transition: background-color 2s cubic-bezier(0.1, 0.9, 0.2, 1), color 2s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.toolbutton:hover {
    background-color: var(--fgcolorpass) !important;
}

.notecard {
    border-width: 0px !important;
    border-radius: 12px !important;
    max-height: 250px;
    width: auto;
    margin-inline: 15%;
    margin-bottom: 8px;
    cursor: pointer;
    user-select: none;
    padding: 1.5rem;
    transition: opacity .5s cubic-bezier(0.1, 0.9, 0.2, 1);
}

.card-text {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden !important;
    text-overflow: ellipsis;
    width: auto;
    line-height: 1.5rem;
    margin-right: 16px;
}

.card-text:not(:empty){
    margin-top: .5rem !important;
}

.shelf-name i{
    margin-right: 5px;
}

#tPageTitle,
#tFoldersTitle {
    width: -webkit-fill-available;
    font-weight: 700;
    font-size: 40px;
    color: var(--fgcolor);
    margin-inline: 15%;
}

#cEmptyListHeader {
    margin-inline: 15%;
}

#tBack {
    font-size: 18px;
}

#tBack i {
    font-size: 18px;
}

body[activeview="edit"] #tNewShelf,
body[activeview="edit"] #tNewNote {
    display: none;
}

body[activeview="edit"] #tDeleteNote,
body[activeview="edit"] #tCloseNote {
    display: block;
}

body[activeview="list"] #tNewNote {
    display: block;
}

body[activeview="list"] #tCloseNote,
body[activeview="list"] #tDeleteNote,
body[activeview="list"] #tNewShelf {
    display: none;
}

body[activeview="all"] #tCloseNote,
body[activeview="all"] #tDeleteNote,
body[activeview="all"] #tNewNote {
    display: none;
}

#vFolderList,
#vFolderTools {
    border: none;
    background-color: var(--fgcolorpass);
    border-radius: 12px;
    padding-inline: 1rem !important;
    padding-block: .5rem;
    margin-inline: 15%;
}

#vFolderList li button,
#vFolderTools li button {
    background-color: transparent;
    border: none;
}

#vFolders,
#vNotes,
#vEditor {
    overflow-y: scroll;
    overflow-x: hidden;
    position: fixed;
    top: 60px;
    height: -webkit-fill-available;
    width: 100%;
    transition: left .7s cubic-bezier(0.1, 0.9, 0.2, 1), opacity .6s cubic-bezier(0.1, 0.9, 0.2, 1);
}

body[activeview="all"] #vFolders {
    left: 0%;
    opacity: 1;
}

body[activeview="all"] #vNotes {
    left: 100%;
    opacity: 0;
}

body[activeview="all"] #vEditor {
    left: 200%;
    opacity: 0;
}

body[activeview="list"] #vFolders {
    left: -100%;
    opacity: 0;
}

body[activeview="list"] #vNotes {
    left: 0%;
    opacity: 1;
}

body[activeview="list"] #vEditor {
    left: 100%;
    opacity: 0;
}

body[activeview="edit"] #vFolders {
    left: -200%;
    opacity: 0;
}

body[activeview="edit"] #vNotes {
    left: -100%;
    opacity: 0;
}

body[activeview="edit"] #vEditor {
    left: 0%;
    opacity: 1;
}



.card-title {
    margin: 0px;
    font-size: 1.5rem !important;
    font-weight: 500;
    width: auto;
    min-width: 20%;
    margin-right: auto;
    display: inline-flex;
    outline: none;
    cursor: text;
}

.tNoteStatus {
    -webkit-appearance: none;
    background-color: transparent;
    border: 3px solid;
    border-radius: 17px;
    height: 25px;
    min-width: 25px;
    margin-right: 8px;
    align-self: center;
}

#iListName, .toolbutton {
    border-width: 0px !important;
    background-color: var(--fgcolorpass);
    border-radius: 12px !important;
    padding-inline: 12px;
}

.tNoteStatus:checked:after {
    content: '\F26E';
    font-size: 20px;
    font-family: bootstrap-icons;
    position: relative;
}

.card-heading {
    display: flex;
    align-items: center;
}

body[activeview="all"] #tBack {
    padding-inline: 8px;
}

body[activeview="all"] #tBack i {
    font-size: 26px;
}
#iListName{
    font-family: 'Inter', sans-serif !important;
    font-size: 20px;
}
#cRenameHeader, #cDeleteHeader{
    margin-top: 0px;
}
form{
    margin-bottom: 0px
}





@media screen and (max-width: 600px) {

    #vFolderList,
    #tPageTitle,
    #tFoldersTitle,
    #iNoteContent,
    #iNoteName,
    #vFolderTools,
    #vNoteList {
        margin-inline: 16px;
    }

    #cEmptyListHeader {
        margin-inline: 0px;
    }

    .notecard {
        margin-inline: 0px;
    }

}

